--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,5 +20,6 @@
 @import "byweb/contents/reviews";
 @import "byweb/contents/footer";
 @import "byweb/form";
+@import "byweb/back-top";
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
