--- a/resources/sass/byweb/contents/reviews.scss
+++ b/resources/sass/byweb/contents/reviews.scss
@@ -11,6 +11,10 @@
     font-size: 0.9em;
 }
 .reviews-img {
+
+    //mixin не выделять
+    @include no-select;
+
     border: 2px solid $pink;
     border-radius: 500px;
     margin-bottom: 10px;
