--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -247,6 +247,11 @@ a {
     justify-content: center;
   }
 }
+@media screen and (max-width: 730px) {
+  .nav {
+    flex-flow: column;
+  }
+}
 
 .sticky {
   position: fixed;
@@ -325,15 +330,33 @@ a {
   align-self: center;
   padding: 0 20px;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 908px) {
   .nav-menu {
-    padding: 0;
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 730px) {
+  .nav-menu {
+    display: block;
+    margin-top: 0;
+    min-width: 180px;
+    width: 100%;
   }
 }
 
 .menu-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+}
+.menu-list li {
+  list-style: none;
+  padding: 0 10px;
+}
+@media screen and (max-width: 730px) {
+  .menu-list li {
+    margin-top: 7px;
+  }
 }
 .menu-list a {
   text-decoration: none;
@@ -346,36 +369,114 @@ a {
   color: #fe7676;
 }
 @media screen and (max-width: 1050px) {
-  .menu-list a {
+  .menu-list {
     font-size: 0.9rem;
-    justify-content: space-between;
   }
 }
 @media screen and (max-width: 995px) {
-  .menu-list a {
-    font-size: 0.8rem;
-    justify-content: space-between;
-  }
-}
-@media screen and (max-width: 720px) {
-  .menu-list a {
-    font-size: 1rem;
-  }
-}
-@media screen and (max-width: 720px) {
   .menu-list {
-    justify-content: center;
+    font-size: 0.8rem;
   }
 }
-.menu-list li {
-  list-style: none;
-  padding: 0 10px;
+@media screen and (max-width: 730px) {
+  .menu-list {
+    display: none;
+    font-size: 1rem;
+    background: #FFF;
+    padding: 10px 0;
+    min-width: 180px;
+    width: 100%;
+  }
 }
 
 .main-menu > li {
   display: flex;
   flex-wrap: wrap;
   flex-flow: row;
+}
+
+/* убираем отступы и поля, а также list-style для "ul",
+             * и добавляем "position:relative" */
+nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: relative;
+  /* измените ' +' на любой другой символ, если нужно*/
+}
+nav ul li > a:after {
+  margin-left: 6px;
+  content: "\f107";
+  font-family: FontAwesome;
+  font-size: 0.8em;
+}
+nav ul li > a:only-child:after {
+  content: "";
+}
+
+/* отображаем выпадающий список при наведении */
+nav ul li:hover > ul {
+  display: inherit;
+}
+
+/* скрываем выпадающие списки по умолчанию * и задаем абсолютное позиционирование */
+.sub-menu {
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 100%;
+  z-index: 5000;
+  background: hsla(0, 0%, 100%, 0.7);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  /* измените ' +' на любой другой символ, если нужно*/
+}
+.sub-menu-items {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+}
+.sub-menu-item {
+  width: 33.3333333333%;
+  box-sizing: border-box;
+  padding-bottom: 15px;
+}
+.sub-menu-item li {
+  padding-left: 0;
+  margin-top: 7px;
+}
+.sub-menu-item i {
+  padding-right: 5px;
+}
+.sub-menu a {
+  font-weight: normal;
+  text-transform: none;
+  color: #076ad0;
+  font-size: 0.9rem;
+}
+.sub-menu-title {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #fe7676;
+  padding: 30px 0 10px 0;
+}
+
+#menu-burger-button {
+  display: none;
+}
+@media screen and (max-width: 730px) {
+  #menu-burger-button {
+    cursor: pointer;
+    display: block;
+    width: 20px;
+    margin: 10px auto;
+    font-size: 2em;
+  }
+}
+
+.open-menu {
+  display: block;
 }
 
 .top {
