--- a/resources/sass/byweb/menu/nav-menu.scss
+++ b/resources/sass/byweb/menu/nav-menu.scss
@@ -1,22 +1,29 @@
+$mobile-width: 730px;
+
 .nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px 0px;
-    z-index:100;
+    z-index: 100;
 
-    @media screen and (max-width: 800px){
+    @media screen and (max-width: 800px) {
         justify-content: center;
 
     }
 
+    @media screen and (max-width: $mobile-width) {
+        flex-flow: column;
+    }
+
 }
+
 //фиксированное меню по скролу
 .sticky {
     position: fixed;
     display: block;
     background: $body-bg;
-    top:0;
+    top: 0;
 
     z-index: 1000;
 
@@ -31,7 +38,7 @@
     align-self: center;
 
     @media screen and (max-width: 760px) {
-       min-height: 50px;
+        min-height: 50px;
 
     }
 
@@ -83,7 +90,7 @@
         }
 
         @media screen and (max-width: 870px) {
-            font-size:1.5rem;
+            font-size: 1.5rem;
         }
 
     }
@@ -96,14 +103,37 @@
     justify-content: flex-end;
     align-self: center;
     padding: 0 20px;
-    @media screen and (max-width: 820px){
-        padding: 0;
+
+    @media screen and (max-width: 908px) {
+        margin-top: 30px;
+    }
+    @media screen and (max-width: $mobile-width) {
+        //align-self: start;
+        display: block;
+        margin-top: 0;
+        min-width: 180px;
+        width: 100%;
 
     }
+
+
 }
 
 .menu-list {
-    display: flex; flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+
+
+    li {
+        list-style: none;
+        padding: 0 10px;
+
+        @media screen and (max-width: $mobile-width) {
+            margin-top: 7px;
+        }
+    }
 
     a {
         text-decoration: none;
@@ -113,42 +143,160 @@
         font-size: 1rem;
 
         &:hover {
-            color:$pink;
-        }
-
-
-        @media screen and (max-width: 1050px) {
-            font-size: 0.9rem;
-            justify-content: space-between;
-        }
-        @media screen and (max-width: 995px) {
-            font-size: 0.8rem;
-            justify-content: space-between;
-        }
-        @media screen and (max-width: 720px) {
-            font-size: 1rem;
-
+            color: $pink;
         }
 
     }
 
-    @media screen and (max-width: 720px) {
-        justify-content: center;
+
+
+    @media screen and (max-width: 1050px) {
+        font-size: 0.9rem;
+    }
+    @media screen and (max-width: 995px) {
+        font-size: 0.8rem;
     }
 
-    li {
-        list-style: none;
-        padding: 0 10px;
+    @media screen and (max-width: $mobile-width) {
+        display: none;
+        font-size: 1rem;
+        background: $white;
+        padding: 10px 0;
+        min-width: 180px;
+        width: 100%;
 
     }
+
+
 }
 
 
-.main-menu > li  {
+.main-menu > li {
     display: flex;
     flex-wrap: wrap;
     flex-flow: row;
 }
+
+
+/* убираем отступы и поля, а также list-style для "ul",
+             * и добавляем "position:relative" */
+nav ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+
+
+    /* измените ' +' на любой другой символ, если нужно*/
+    li > a:after {
+        margin-left: 6px;
+        content: "\f107";
+        font-family: FontAwesome;
+        font-size: 0.8em;
+    }
+
+    li > a:only-child:after {
+        content: '';
+    }
+}
+
+
+/* отображаем выпадающий список при наведении */
+nav ul li:hover > ul {
+    display: inherit;
+}
+
+/* скрываем выпадающие списки по умолчанию * и задаем абсолютное позиционирование */
+.sub-menu {
+
+    //раскрывает sub-menu
+    display: none;
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    z-index: 5000;
+
+    background: hsl(0 0% 100%/0.7);
+    backdrop-filter: blur(5px);
+
+    /* измените ' +' на любой другой символ, если нужно*/
+    //li > a:after {
+    //    content:  ' >';
+    //}
+    //li > a:only-child:after {
+    //    content: '';
+    //}
+
+
+    &-items {
+        display: flex;
+        justify-content: space-between;
+        box-sizing: border-box;
+        //адаптив
+        flex-wrap: wrap;
+    }
+
+    //колонка под меню на 3 части
+    &-item {
+
+        width: calc(100% / 3);
+        box-sizing: border-box;
+
+        padding-bottom: 15px;
+
+        li {
+            padding-left: 0;
+            margin-top: 7px;
+        }
+
+        i {
+            padding-right: 5px;
+        }
+
+    }
+
+    //ссылки подменю
+    a {
+        font-weight: normal;
+        text-transform: none;
+        color: $indigo;
+        font-size: 0.9rem;
+    }
+
+    //заголовок подменю
+    &-title {
+        text-transform: uppercase;
+        font-weight: bold;
+        color: $pink;
+        padding: 30px 0 10px 0;
+
+    }
+}
+
+// бурген меню
+#menu-burger-button {
+
+    display: none;
+
+    @media screen and (max-width: $mobile-width){
+        cursor: pointer;
+        display: block;
+        width: 20px;
+        margin: 10px auto;
+        font-size: 2em;
+
+    }
+
+}
+
+//открывает меню в мобильно версии по клику
+.open-menu {
+    display: block;
+}
+
+
+
+
 
 
 
