--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 @import 'byweb/template';
 @import 'byweb/buttons';
 @import "byweb/menu/nav-menu";
+@import "byweb/menu/logo";
 @import "byweb/menu/top-menu";
 @import 'byweb/slider/slider-item';
 @import "byweb/polosa";
