--- a/resources/sass/byweb/_mixins.scss
+++ b/resources/sass/byweb/_mixins.scss
@@ -8,6 +8,8 @@
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently*/
 
+}
 
-
+@mixin shadow-menu {
+box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
