--- a/resources/sass/byweb/slider/slider-item.scss
+++ b/resources/sass/byweb/slider/slider-item.scss
@@ -1,5 +1,5 @@
 #slider {
-    height: 100vh;
+    height: calc(100vh - 75px - 83px);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -16,7 +16,7 @@
 .slider-img {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 75px - 83px);
     background: $blue;
     background: linear-gradient(0deg, rgba(115,195,232,1) 0%, rgba(255,255,255,1) 100%);
     background-size: cover;
@@ -31,7 +31,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh - 75px - 83px);
     //flex-grow: 1;
     justify-content: center;
     width: 1490px;
