--- a/resources/sass/byweb/contents/footer.scss
+++ b/resources/sass/byweb/contents/footer.scss
@@ -1,3 +1,39 @@
+.footer {
+
+    &-desc {
+        color: $footer-gray;
+    }
+
+    //&-contacts {
+    //    position: fixed;
+    //    bottom: 0;
+    //    width: 100%;
+    //}
+
+    &-phone {
+
+        position: relative;
+        font-size: 1.8rem;
+        font-weight: bold;
+        color: $white;
+        margin: 0 auto;
+
+        h3 {
+            font-size: 1rem;
+            color: $pink;
+            text-transform: uppercase;
+        }
+
+        a {
+            color: $white;
+            &:hover {
+                color: $gray;
+            }
+        }
+
+    }
+}
+
 #footer {
 
     background: $black;
@@ -5,75 +41,44 @@
     h2 {
         color: $white;
     }
-}
 
-.footer-desc {
-    color: $footer-gray;
-}
-
-#footer-first-photo  {
-    padding-right:10px;
-}
-
-#footer-ceo, #footer-qr {
-    height: 150px;
-    box-shadow: 1.3rem 1.3rem 2.4rem rgba(152, 39, 245, 0.29);
-    -webkit-box-shadow: 1.3rem 1.3rem 2.4rem rgba(152, 39, 245, 0.29);
-    -moz-box-shadow: 1.3rem 1.3rem 2.4rem rgba(152, 39, 245, 0.29);
-    transition: box-shadow 1s;
-
-
-    &:hover {
-        box-shadow: 1.3rem 1.3rem 2rem rgba(39, 245, 226, 0.3);
-        -webkit-box-shadow: 1.3rem 1.3rem 2rem rgba(39, 245, 226, 0.3);
-        -moz-box-shadow: 1.3rem 1.3rem 2rem rgba(39, 245, 226, 0.3);
+    &-first-photo  {
+        padding-right:10px;
     }
-}
 
-#footer-ceo {
-    border: 3px solid $white;
-    border-radius: 100px;
-    filter: sepia(50%);
-
-    &:hover{
-        filter: sepia(0%);
-    }
-}
+    &-ceo, &-qr {
+        height: 150px;
+        box-shadow: 1.3rem 1.3rem 2.4rem rgba(152, 39, 245, 0.29);
+        -webkit-box-shadow: 1.3rem 1.3rem 2.4rem rgba(152, 39, 245, 0.29);
+        -moz-box-shadow: 1.3rem 1.3rem 2.4rem rgba(152, 39, 245, 0.29);
+        transition: box-shadow 1s;
 
 
-#footer-phone {
-    a {
-        color: $white;
         &:hover {
-            color: $gray;
+            box-shadow: 1.3rem 1.3rem 2rem rgba(39, 245, 226, 0.3);
+            -webkit-box-shadow: 1.3rem 1.3rem 2rem rgba(39, 245, 226, 0.3);
+            -moz-box-shadow: 1.3rem 1.3rem 2rem rgba(39, 245, 226, 0.3);
+        }
+    }
+
+    &-ceo {
+        border: 3px solid $white;
+        border-radius: 100px;
+        filter: sepia(50%);
+
+        &:hover{
+            filter: sepia(0%);
+        }
+    }
+
+    &-phone {
+        a {
+            color: $white;
+            &:hover {
+                color: $gray;
+            }
         }
     }
 }
 
-.footer-phone {
-
-position: relative;
-    font-size: 1.8rem;
-    font-weight: bold;
-    color: $white;
-    margin: 0 auto;
-
-    h3 {
-        font-size: 1rem;
-        color: $pink;
-        text-transform: uppercase;
-    }
-
-    a {
-        color: $white;
-        &:hover {
-            color: $gray;
-        }
-    }
-
-
-
-
-
-}
 
