--- a/resources/sass/byweb/back-top.scss
+++ b/resources/sass/byweb/back-top.scss
@@ -3,7 +3,6 @@
     position: fixed;
     background: $white;
 
-
     border-radius: 100px;
     height: 50px;
     width: 50px;
@@ -12,6 +11,8 @@
 
     bottom: 50px;
     right: 30px;
+
+
 
 
     &:hover {
@@ -30,7 +31,7 @@
 
 
     padding: 7px 10px;
-
+    color: $pink;
 
     &:hover {
 
