--- a/resources/sass/byweb/buttons.scss
+++ b/resources/sass/byweb/buttons.scss
@@ -7,6 +7,8 @@
     border-radius: 10px;
     padding: 10px 15px;
 
+    text-transform: uppercase;
+
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0), 0 2px 2px 0 rgba(0, 0, 0, 0), 0 2px 2px 0 rgba(0, 0, 0, 0), 0 7px 10px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0), 0 1px 1px 0 rgba(0, 0, 0, 0);
     overflow: hidden;
 
