--- a/resources/sass/byweb/contents/top.scss
+++ b/resources/sass/byweb/contents/top.scss
@@ -9,33 +9,37 @@
         font-weight: normal;
     }
 
+
+
 }
 .content-top-item{
     display: flex;
     justify-content: space-between;
-    @media screen and (max-width: 820px) {
-        flex-wrap: wrap;
-    }
-}
 
-.content-top-item {
     figure {
         flex-basis: 20%;
 
         @media screen and (max-width: 820px) {
             flex-basis: 100%;
 
-text-align: center;
+            text-align: center;
             padding-bottom: 20px;
 
         }
 
     }
+
     img {
         max-width: 460px;
         @media screen and (max-width: 820px) {
             width: 100%;
         }
+    }
+
+
+
+    @media screen and (max-width: 820px) {
+        flex-wrap: wrap;
     }
 }
 
@@ -51,4 +55,18 @@ text-align: center;
         }
     }
 
+}
+
+.top-menu-item {
+    a {
+        color: $white;
+        text-decoration: none;
+    }
+
+    b, strong {
+        color: $pink;
+    }
+    img {
+        vertical-align: middle;
+    }
 }
