Dev cache for calc module

--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -950,7 +950,7 @@ nav ul li > a:only-child:after {
   display: flex;
   box-sizing: border-box;
   flex-wrap: wrap;
-  height: 200px;
+  height: 250px;
   overflow-y: auto !important;
   margin: 0 auto;
   padding: 22px 30px;
@@ -1031,6 +1031,47 @@ nav ul li > a:only-child:after {
   font-size: 1.8rem;
 }
 
+/*animation arrow - strelka*/
+.arrow {
+  position: relative;
+}
+
+.arrow:hover::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  right: 22px;
+  opacity: 0.7;
+  height: 63px;
+  width: 30px;
+  background-image: url("/tpl/byweb/img/strelka.png");
+  animation: my-moution-arrow 0.7s infinite linear;
+  -webkit-animation: my-moution-arrow 0.7s infinite linear;
+}
+@keyframes my-moution-arrow {
+  0% {
+    top: 40%;
+  }
+  20% {
+    top: 41%;
+  }
+  30% {
+    top: 42%;
+  }
+  40% {
+    top: 43%;
+  }
+  60% {
+    top: 42%;
+  }
+  80% {
+    top: 41%;
+  }
+  100% {
+    top: 40%;
+  }
+}
+/*end animation arrow - strelka*/
 input[type=file], input[type=image], input[type=submit], input[type=reset], input[type=button], input[type=radio], input[type=checkbox] {
   width: auto;
 }
